[tool.poetry]
name = "shap-project"
version = "0.1.0"
description = ""
authors = ["kuwa98 <92083270+Itsuki966@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
japanize-matplotlib = "^1.1.3"
pip = "^24.0"
shap = "0.44.1"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
