[tool.poetry]
name = "shap-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
torch = "^2.3.1"
shap = "~0.44"
matplotlib = "^3.9.1"
numpy = "~1.26.4"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
